# discord-join-notify

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-release.yaml
src/: main.rs
